--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "autoprefixer": "^9",
     "comma-number": "^2.0.2",
     "dayjs": "^1.10.4",
+    "md5": "^2.3.0",
     "postcss": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^6.0.1",
     "react-scripts": "4.0.3",
+    "seedrandom": "^3.0.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "web-vitals": "^1.0.1"
   },
