--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 RewriteEngine On
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^ /build/ [L]
+RewriteCond %{THE_REQUEST} /build/([^\s?]*) [NC]
+RewriteRule ^ %1 [L,NE,R=302]
+RewriteRule ^((?!build/).*)$ build/$1 [L,NC]
 
 RewriteCond %{SERVER_PORT} 80
 RewriteRule ^(.*)$ https://moreorlessfollowers.com/$1 [R,L]
